--- a/traefik/traefikv2.yml
+++ b/traefik/traefikv2.yml
@@ -24,6 +24,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./config:/etc/traefik
       - ./log/traefik.log:/traefik.log
+      - ./log/access.log:/access.log
       - ./certificates/acme.json:/acme.json
     networks:
       - traefik_public
