--- a/traefik/config/traefik.toml
+++ b/traefik/config/traefik.toml
@@ -16,9 +16,9 @@
 [entryPoints.http]
   address = ":80"
   # Redirect to HTTPS (why wouldn't you?)
-  [entryPoints.http.http.redirections.entryPoint]
-    to = "https"
-    scheme = "https"
+  #[entryPoints.http.http.redirections.entryPoint]
+  #  to = "https"
+  #  scheme = "https"
 
 [entryPoints.https]
   address = ":443"
